--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,9 @@ default: &default
 development:
   <<: *default
   database: scmcms_development
+  username: scmcms
+  password: root
+
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +61,8 @@ development:
 test:
   <<: *default
   database: scmcms_test
+  username: scmcms
+  password: root
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
